# pfinance-api

./: .env  Cargo.toml  Rocket.toml  init.sql
src/: db.rs  main.rs  model.rs  read_query.rs  routes.rs
src/sql_db/Budget/: Get_Budget.sql  Submit_Budget.sql
src/sql_db/Dashboard/: All_Egresos.sql  All_Egresos_Pre.sql  All_Ingresos.sql  All_Ingresos_Pre.sql  Cons_Egresos.sql  Cons_Egresos_Pre.sql  Cons_Ingresos.sql  Cons_Ingresos_Pre.sql  Ingresos_vs_Egresos.sql
src/sql_db/Detail/: Get_Detail.sql  Get_by_Categoria.sql  Submit_Detail.sql
src/sql_db/Tasas/: submit_tasa.sql
src/sql_db/Util/: Get_Categorias.sql  Get_Last_Tasa.sql  Get_Presupuestos.sql  Get_Tipos.sql
